--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -18,7 +18,7 @@
     const h = (typeof location !== 'undefined' && location.hostname) ? location.hostname : '';
     // Treat localhost and common private LAN ranges as development hosts
     const isLocalHost = h === 'localhost' || h === '127.0.0.1' || /^192\.168\./.test(h) || /^10\./.test(h) || /^172\.(1[6-9]|2\d|3[0-1])\./.test(h);
-  const REMOTE_BACKEND_URL = 'https://script.google.com/macros/s/AKfycbzYr2sSS9w7Zgil_vHCrZESGidiVMzaMJKtKUi9A4QPaoUXRR6VmQeeeomdaMr6RJ_duQ/exec';
+      const REMOTE_BACKEND_URL = 'https://script.google.com/macros/s/AKfycbzdid5JqHEArgvL5lQ8L9nv_RCO82rm0EVc5CJiOJE031EoI_0EebxoFtOfU0RiOmo31A/exec';
     const LOCAL_PROXY_URL = 'http://localhost:3000/api';
     let useLocalProxy = false;
     try {
@@ -57,7 +57,7 @@
               <form id="loginForm" class="form">
                 <div class="welcome-section">
                   <img src="../assets/Logo_gris.png" alt="Logo" class="form-logo" loading="lazy" onerror="this.style.display='none'">
-                  <h1 class="system-name">PAI 2025</h1>
+                  <h1 class="system-name">PAI 2026</h1>
                   <h2 class="form-welcome-title">¡Hola, <span style='color: #FFD600'>Bienvenido!</span></h2>
                   <p class="form-welcome-subtitle">Plataforma de administración e información para el Plan de Acción Institucional 2025</p>
                 </div>
@@ -85,8 +85,8 @@
                 <div class="feature-icon">
                   <span class="icon-chart">&#x1F4CA;</span>
                 </div>
-                <h3>Bienvenido a PAI 2025</h3>
-                <p>PAI 2025 centraliza el registro de actividades y avances, proporcionando control total sobre la información registrada y disponible para la toma de decisiones.</p>
+                <h3>Bienvenido al Plan de Acción Institucional</h3>
+                <p>Centraliza el registro de actividades y avances, proporcionando control total sobre la información registrada y disponible para la toma de decisiones.</p>
                 <img src="../assets/Login_UNGRD.png" alt="Ilustración" class="login-illustration" width="280" loading="lazy" onerror="this.style.display='none'">
               </div>
               <div class="carousel-slide">
@@ -108,7 +108,7 @@
                   <span class="icon-mobile">&#x1F4F1;</span>
                 </div>
                 <h3>Control y disponibilidad de información</h3>
-                <p>Accede a información consolidada para análisis y toma de decisiones. Todo lo registrado queda disponible y controlado por PAI 2025.</p>
+                <p>Accede a información consolidada para análisis y toma de decisiones. Todo lo registrado queda disponible y controlado.</p>
               </div>
             </div>
           </div>
